--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body {
+  height: 100vh;
+}
+
 /* You can add global styles to this file, and also import other style files */
 :root {
   --newitemsize: 7rem;
